// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WithSuspense stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="p-6"
>
  <h2
    class="text-2xl font-bold mb-2"
  >
    Default Component
  </h2>
  <p
    class="text-muted-foreground"
  >
    This component was loaded with Suspense.
  </p>
</div>
`;

exports[`WithSuspense stories snapshot > FallbackVisible story renders and matches snapshot 1`] = `
<div
  class="p-6 bg-muted rounded"
>
  Loading slow data…
</div>
`;

exports[`WithSuspense stories snapshot > WithPromise story renders and matches snapshot 1`] = `
<div
  class="p-6"
>
  Loading data...
</div>
`;
